# automation-framework

./: README.MD  pyproject.toml
automation/apps/obsidian/data/: little_text.md
automation/apps/obsidian/pages/: home_page.py  library_page.py
automation/config/: driver_manager.py  settings.py
automation/utils/: debug_helper.py  exceptions.py  logger.py  screenshot_manager.py
