[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-framework"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "PyAutoGUI==0.9.54",
    "selenium>=4.40.0",
    "webdriver-manager==4.0.2",
    "mss==10.1.0",
    "opencv-python==4.13.0.92",
    "pyperclip==1.11.0",
    "psutil==7.2.2"
]

[tool.setuptools.packages.find]
where = ["automation"]